fix: double scroll on admin page

--- a/scss/avadinte/_core.scss
+++ b/scss/avadinte/_core.scss
@@ -187,3 +187,11 @@ span.login {
         color: white;
     }
 }
+
+.h5p-player {
+    padding-left:3rem;
+    padding-right:3rem;
+}
+
+
+
